some more fixes haha