@@ -3,7 +3,6 @@ package me.darkolythe.deepstorageplus.dsu;
 import me.darkolythe.deepstorageplus.dsu.managers.DSUManager;
 import me.darkolythe.deepstorageplus.dsu.managers.SorterManager;
 import me.darkolythe.deepstorageplus.utils.ItemList;
-import org.apache.commons.lang.WordUtils;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
@@ -13,7 +12,9 @@ import org.bukkit.event.inventory.InventoryType;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Locale;
 
 public class StorageUtils {
 
@@ -21,17 +22,21 @@ public class StorageUtils {
     Check if the item "has no meta" which counts enchants, damage, lore, name, etc.
      */
     public static boolean hasNoMeta(ItemStack item) {
-        if (item.getDurability() != 0) {
+        if (ItemList.isPluginItem(item)) {
+            return false;
+        }
+        if (item.getItemMeta() instanceof org.bukkit.inventory.meta.Damageable damageable && damageable.getDamage() != 0) {
             return false;
         }
         if (item.getType().toString().contains("SHULKER_BOX")) {
             return false;
         }
-        if (item.hasItemMeta()) {
-            if (item.getItemMeta().hasEnchants()) {
+        var meta = item.getItemMeta();
+        if (meta != null) {
+            if (meta.hasEnchants()) {
                 return false;
             }
-            if (item.getItemMeta().hasDisplayName()) {
+            if (meta.hasDisplayName()) {
                 return false;
             }
             if (item.getType() == Material.ENCHANTED_BOOK) {
@@ -46,15 +51,10 @@ public class StorageUtils {
             if (item.getType() == Material.TIPPED_ARROW) {
                 return false;
             }
-            if (item.getItemMeta().hasLore()) {
-                if (item.getItemMeta().getLore().get(0).contains("Item Count: ")) {
-                    if (item.getDurability() != 0) {
-                        return false;
-                    }
-                    if (item.getEnchantments().size() > 0) {
-                        return false;
-                    }
-                    return true;
+            if (meta.hasLore()) {
+                var lore = meta.getLore();
+                if (lore != null && !lore.isEmpty() && lore.getFirst().contains("Item Count: ")) {
+                    return item.getEnchantments().isEmpty();
                 }
                 return false;
             }
@@ -66,14 +66,60 @@ public class StorageUtils {
     Turns a Material into a String. ex: EMERALD_ORE -> Emerald Ore
      */
     public static String matToString(Material mat) {
-        return WordUtils.capitalize(mat.toString().toLowerCase().replaceAll("_", " "));
+        String raw = mat.toString().toLowerCase().replace('_', ' ');
+        StringBuilder result = new StringBuilder(raw.length());
+        boolean capitalizeNext = true;
+        for (char c : raw.toCharArray()) {
+            if (capitalizeNext && Character.isLetter(c)) {
+                result.append(Character.toUpperCase(c));
+                capitalizeNext = false;
+            } else {
+                result.append(c);
+                capitalizeNext = c == ' ';
+            }
+        }
+        return result.toString();
     }
 
     /*
     Turns a String into a Material. ex: Emerald Ore -> EMERALD_ORE
      */
     public static Material stringToMat(String str, String remStr) {
-        return Material.valueOf(str.replace(remStr, "").toUpperCase().replace(" ", "_").toUpperCase());
+        if (str == null) {
+            return Material.AIR;
+        }
+
+        String cleaned = ChatColor.stripColor(str);
+        if (cleaned == null) {
+            return Material.AIR;
+        }
+
+        String removeToken = ChatColor.stripColor(remStr == null ? "" : remStr);
+        if (removeToken != null && !removeToken.isEmpty()) {
+            cleaned = cleaned.replace(removeToken, "");
+        }
+
+        int separatorIndex = cleaned.indexOf(':');
+        if (separatorIndex >= 0 && separatorIndex + 1 < cleaned.length()) {
+            cleaned = cleaned.substring(separatorIndex + 1);
+        }
+
+        cleaned = cleaned.trim();
+        if (cleaned.isEmpty()) {
+            return Material.AIR;
+        }
+
+        String normalized = cleaned
+                .replace(' ', '_')
+                .replace('-', '_')
+                .toUpperCase(Locale.ROOT);
+
+        if (normalized.equals("NONE") || normalized.equals("KEINE") || normalized.equals("ALL") || normalized.equals("ALLE")) {
+            return Material.AIR;
+        }
+
+        Material material = Material.matchMaterial(normalized);
+        return material != null ? material : Material.AIR;
     }
 
     public static boolean isDSU(Inventory inv) {
@@ -83,29 +129,16 @@ public class StorageUtils {
         if (inv.getType() != InventoryType.CHEST)
             return false;
 
-        for (ItemStack i : inv.getContents()) {
-            if (i != null) {
-                if (i.getType().equals(Material.TRIPWIRE_HOOK)
-                        && i.hasItemMeta()
-                        && i.getItemMeta().hasDisplayName()
-                        && i.getItemMeta().getDisplayName().equals(ChatColor.BLUE.toString() + "Lock DSU")) {
-                    return false;
-                }
-            }
-        }
 
-        int slots[] = {7, 16, 25, 34, 43, 52};
+        int[] slots = {7, 16, 25, 34, 43, 52};
         boolean isDSU = false;
 
         for (int i : slots) {
-            if (inv.getItem(i) != null && inv.getItem(i).equals(DSUManager.getDSUWall()))
+            if (Objects.equals(inv.getItem(i), DSUManager.getDSUWall()))
                 isDSU = true;
         }
 
-        if (!isDSU)
-            return false;
-
-        return true;
+        return isDSU;
     }
 
     public static boolean isSorter(Inventory inv) {
@@ -115,36 +148,34 @@ public class StorageUtils {
         if (inv.getType() != InventoryType.CHEST)
             return false;
 
-        int slots[] = {18, 19, 20, 21, 22, 23, 24, 25, 26};
+        int[] slots = {18, 19, 20, 21, 22, 23, 24, 25, 26};
         boolean isSorter = false;
 
         for (int i : slots) {
-            if (inv.getItem(i) != null && inv.getItem(i).equals(SorterManager.getSorterWall()))
+            if (Objects.equals(inv.getItem(i), SorterManager.getSorterWall()))
                 isSorter = true;
         }
 
-        if (!isSorter)
-            return false;
-
-        return true;
+        return isSorter;
     }
 
     /**
      * Returns the custom name of a chest or double chest, if either side has one. Prefers the left chest.
-     * @param block
-     * @return
+     * @param block the block to inspect
+     * @return the custom name if available
      */
     public static Optional<String> getChestCustomName(Block block) {
         Chest chest = (Chest) block.getState();
-        if (chest.getInventory().getHolder() instanceof DoubleChest) {
-            DoubleChest doubleChest = (DoubleChest) chest.getInventory().getHolder();
+        if (chest.getInventory().getHolder() instanceof DoubleChest doubleChest) {
             Chest leftChest = (Chest) doubleChest.getLeftSide();
             Chest rightChest = (Chest) doubleChest.getRightSide();
-            if (leftChest.getCustomName() != null) {
-                return Optional.of(leftChest.getCustomName());
+            String leftName = leftChest.getCustomName();
+            if (leftName != null) {
+                return Optional.of(leftName);
             }
-            if (rightChest.getCustomName() != null) {
-                return Optional.of(rightChest.getCustomName());
+            String rightName = rightChest.getCustomName();
+            if (rightName != null) {
+                return Optional.of(rightName);
             }
         }
         return Optional.ofNullable(chest.getCustomName());
