@@ -1,78 +1,100 @@
 package me.darkolythe.deepstorageplus.dsu.managers;
 
-import de.tr7zw.changeme.nbtapi.NBTItem;
+import me.darkolythe.deepstorageplus.DeepStoragePlus;
+import me.darkolythe.deepstorageplus.utils.ItemList;
 import me.darkolythe.deepstorageplus.utils.LanguageManager;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
+import org.bukkit.NamespacedKey;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.persistence.PersistentDataType;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
+import static me.darkolythe.deepstorageplus.dsu.StorageUtils.matToString;
 import static me.darkolythe.deepstorageplus.dsu.StorageUtils.stringToMat;
 
 public class SettingsManager {
+
+    private static final String SPEED_PDC_KEY = "dsu_io_speed";
+    private static final int DEFAULT_MAX_SPEED_LEVEL = 63;
+    private static final Pattern SPEED_DIGITS_PATTERN = Pattern.compile("(\\d+)");
 
     /*
     Takes the dsu's inventory and lets the player choose an item to export from the list. (Also allow for other things? we shall see. maybe amount of item? Upgrades?)
      */
     public static Inventory createIOInventory(Inventory DSUInv) {
-        Inventory IOInv = Bukkit.createInventory(null, 54, ChatColor.BLUE.toString() + ChatColor.BOLD.toString() + LanguageManager.getValue("dsuioconfig"));
+        Inventory IOInv = Bukkit.createInventory(null, 54, ChatColor.BLUE + "" + ChatColor.BOLD + LanguageManager.getValue("dsuioconfig"));
 
         for (int x = 0; x < 53; x++) {
             if (x % 9 != 8) {
-                if (DSUInv.getItem(x) != null) {
-                    IOInv.setItem(x, DSUInv.getItem(x).clone());
+                ItemStack source = DSUInv.getItem(x);
+                if (source != null) {
+                    IOInv.setItem(x, source.clone());
                 }
             }
         }
 
         ItemStack IOItem = DSUInv.getItem(53);
-        ItemMeta IOMeta = IOItem.getItemMeta();
-        List<String> lore = IOMeta.getLore();
+        ItemMeta IOMeta = IOItem != null ? IOItem.getItemMeta() : null;
+        List<String> lore = IOMeta != null && IOMeta.getLore() != null ? IOMeta.getLore() : List.of();
 
         /*
          * Create the IO settings item with use of the DSUinv to check for existing IO items
          */
-        if (lore.get(0).contains(ChatColor.BLUE + LanguageManager.getValue("all"))) {
+        String inputLine = lore.isEmpty() ? "" : lore.getFirst();
+        Material inputMaterial = stringToMat(inputLine, ChatColor.GRAY + LanguageManager.getValue("input") + ": " + ChatColor.GREEN);
+        if (inputMaterial == Material.AIR || isAllToken(inputLine)) {
             IOInv.setItem(8, getEmptyInputSlot());
         } else {
             ItemStack newInput = getEmptyInputSlot();
-            newInput.setType(stringToMat(lore.get(0), ChatColor.GRAY + LanguageManager.getValue("input") + ": " + ChatColor.GREEN));
+            newInput.setType(inputMaterial);
             ItemMeta inputMeta = newInput.getItemMeta();
-            inputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("input") + ": " + lore.get(0).replace(ChatColor.GRAY + LanguageManager.getValue("input") + ": ", ""));
-            inputMeta.setLore(Arrays.asList(ChatColor.GRAY + LanguageManager.getValue("clicktoclear")));
-            newInput.setItemMeta(inputMeta);
+            if (inputMeta != null) {
+                inputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("input") + ": " + ChatColor.GREEN + matToString(inputMaterial));
+                inputMeta.setLore(List.of(ChatColor.GRAY + LanguageManager.getValue("clicktoclear")));
+                newInput.setItemMeta(inputMeta);
+            }
             IOInv.setItem(8, newInput);
         }
-        if (lore.get(1).contains(ChatColor.BLUE + LanguageManager.getValue("none"))) {
+
+        String outputLine = lore.size() > 1 ? lore.get(1) : "";
+        Material outputMaterial = stringToMat(outputLine, ChatColor.GRAY + LanguageManager.getValue("output") + ": " + ChatColor.GREEN);
+        if (outputMaterial == Material.AIR || isNoneToken(outputLine)) {
             IOInv.setItem(17, getEmptyOutputSlot());
         } else {
             ItemStack newOutput = getEmptyOutputSlot();
-            newOutput.setType(stringToMat(lore.get(1), ChatColor.GRAY + LanguageManager.getValue("output") + ": " + ChatColor.GREEN));
+            newOutput.setType(outputMaterial);
             ItemMeta outputMeta = newOutput.getItemMeta();
-            outputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("output") + ": " + lore.get(1).replace(ChatColor.GRAY + LanguageManager.getValue("output") + ": ", ""));
-            outputMeta.setLore(Arrays.asList(ChatColor.GRAY + LanguageManager.getValue("clicktoclear")));
-            newOutput.setItemMeta(outputMeta);
+            if (outputMeta != null) {
+                outputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("output") + ": " + ChatColor.GREEN + matToString(outputMaterial));
+                outputMeta.setLore(List.of(ChatColor.GRAY + LanguageManager.getValue("clicktoclear")));
+                newOutput.setItemMeta(outputMeta);
+            }
             IOInv.setItem(17, newOutput);
         }
 
         ItemStack sortSlot = new ItemStack(Material.COMPASS);
         ItemMeta sortMeta = sortSlot.getItemMeta();
-        sortMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("sortingby") + ": " + lore.get(2).replace(ChatColor.GRAY + LanguageManager.getValue("sortingby") + ": ", ""));
-        sortMeta.setLore(Arrays.asList(ChatColor.GRAY + LanguageManager.getValue("changesorting"),
-                ChatColor.BLUE + LanguageManager.getValue("container") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortscontainer"),
-                ChatColor.BLUE + LanguageManager.getValue("alpha") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortsalpha"),
-                ChatColor.BLUE + LanguageManager.getValue("amount") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortsamount"),
-                ChatColor.BLUE + "ID: " + ChatColor.GRAY + LanguageManager.getValue("sortsid")));
-        sortSlot.setItemMeta(sortMeta);
+        if (sortMeta != null) {
+            String sortLine = lore.size() > 2 ? lore.get(2) : "";
+            sortMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("sortingby") + ": " + sortLine.replace(ChatColor.GRAY + LanguageManager.getValue("sortingby") + ": ", ""));
+            sortMeta.setLore(List.of(ChatColor.GRAY + LanguageManager.getValue("changesorting"),
+                    ChatColor.BLUE + LanguageManager.getValue("container") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortscontainer"),
+                    ChatColor.BLUE + LanguageManager.getValue("alpha") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortsalpha"),
+                    ChatColor.BLUE + LanguageManager.getValue("amount") + ": " + ChatColor.GRAY + LanguageManager.getValue("sortsamount"),
+                    ChatColor.BLUE + "ID: " + ChatColor.GRAY + LanguageManager.getValue("sortsid")));
+            sortSlot.setItemMeta(sortMeta);
+        }
         IOInv.setItem(26, sortSlot);
 
         IOInv.setItem(53, createDSULock(DSUInv));
@@ -84,9 +106,11 @@ public class SettingsManager {
      * Add lock to IO settings menu
      */
     public static ItemStack createDSULock(Inventory LockInv) {
-        ItemStack lock = new ItemStack(Material.TRIPWIRE_HOOK);
+        ItemStack lock = new ItemStack(ItemList.resolveItemMaterial(ItemList.KEY_DSU_LOCK, Material.TRIPWIRE_HOOK));
         ItemMeta lockmeta = lock.getItemMeta();
-        lockmeta.setDisplayName(ChatColor.BLUE + "Lock DSU");
+        if (lockmeta != null) {
+            lockmeta.setDisplayName(ChatColor.BLUE + "Lock DSU");
+        }
         List<String> locklore = new ArrayList<>();
         locklore.add(ChatColor.GRAY + LanguageManager.getValue("leftclicktoadd"));
         locklore.add(ChatColor.GRAY + LanguageManager.getValue("rightclicktoremove"));
@@ -101,12 +125,12 @@ public class SettingsManager {
         } else {
             locklore.add(ChatColor.GREEN + LanguageManager.getValue("unlocked"));
         }
-        lockmeta.setLore(locklore);
-        lock.setItemMeta(lockmeta);
-
-        NBTItem nbt = new NBTItem(lock);
-        nbt.setString("dsu_owner_uuid", getOwner(LockInv.getItem(53))[1]);
-        lock = nbt.getItem();
+        if (lockmeta != null) {
+            lockmeta.setLore(locklore);
+            lockmeta.getPersistentDataContainer().set(new NamespacedKey(DeepStoragePlus.getInstance(), "item_id"), PersistentDataType.STRING, ItemList.KEY_DSU_LOCK);
+            lockmeta.getPersistentDataContainer().set(new NamespacedKey(DeepStoragePlus.getInstance(), "item_group"), PersistentDataType.STRING, ItemList.GROUP_SUPPORT);
+            lock.setItemMeta(lockmeta);
+        }
 
         return lock;
     }
@@ -117,11 +141,13 @@ public class SettingsManager {
     private static ItemStack getEmptyInputSlot() {
         ItemStack inputSlot = new ItemStack(Material.WHITE_STAINED_GLASS_PANE);
         ItemMeta inputMeta = inputSlot.getItemMeta();
-        inputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("input") + ": " + ChatColor.BLUE + LanguageManager.getValue("all"));
-        inputMeta.setLore(Arrays.asList(ChatColor.GRAY + LanguageManager.getValue("clicktostart"),
-                ChatColor.GRAY + LanguageManager.getValue("clickinput"),
-                ChatColor.GRAY + LanguageManager.getValue("leaveasall")));
-        inputSlot.setItemMeta(inputMeta);
+        if (inputMeta != null) {
+            inputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("input") + ": " + ChatColor.BLUE + LanguageManager.getValue("all"));
+            inputMeta.setLore(List.of(ChatColor.GRAY + LanguageManager.getValue("clicktostart"),
+                    ChatColor.GRAY + LanguageManager.getValue("clickinput"),
+                    ChatColor.GRAY + LanguageManager.getValue("leaveasall")));
+            inputSlot.setItemMeta(inputMeta);
+        }
 
         return inputSlot;
     }
@@ -132,10 +158,12 @@ public class SettingsManager {
     private static ItemStack getEmptyOutputSlot() {
         ItemStack outputSlot = new ItemStack(Material.WHITE_STAINED_GLASS_PANE);
         ItemMeta outputMeta = outputSlot.getItemMeta();
-        outputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("output") + ": " + ChatColor.BLUE + LanguageManager.getValue("none"));
-        outputMeta.setLore(Arrays.asList(ChatColor.GRAY + LanguageManager.getValue("clicktostart"),
-                ChatColor.GRAY + LanguageManager.getValue("clickoutput")));
-        outputSlot.setItemMeta(outputMeta);
+        if (outputMeta != null) {
+            outputMeta.setDisplayName(ChatColor.GRAY + LanguageManager.getValue("output") + ": " + ChatColor.BLUE + LanguageManager.getValue("none"));
+            outputMeta.setLore(List.of(ChatColor.GRAY + LanguageManager.getValue("clicktostart"),
+                    ChatColor.GRAY + LanguageManager.getValue("clickoutput")));
+            outputSlot.setItemMeta(outputMeta);
+        }
 
         return outputSlot;
     }
@@ -145,10 +173,16 @@ public class SettingsManager {
      */
     public static void startSelection(int slot, Inventory inv) {
         for (int i = 0; i < inv.getContents().length; i++) {
-            if (inv.getItem(i) != null) {
-                if (inv.getItem(i).getEnchantments().size() > 0) {
-                    ItemStack newItem = inv.getItem(i);
-                    newItem.removeEnchantment(Enchantment.DURABILITY);
+            ItemStack selected = inv.getItem(i);
+            if (selected != null && selected.hasItemMeta()) {
+                ItemMeta selectedMeta = selected.getItemMeta();
+                if (selectedMeta != null && !selectedMeta.getEnchants().isEmpty()) {
+                    ItemStack newItem = selected.clone();
+                    ItemMeta newMeta = newItem.getItemMeta();
+                    if (newMeta != null) {
+                        newMeta.removeEnchant(Enchantment.UNBREAKING);
+                        newItem.setItemMeta(newMeta);
+                    }
                     inv.setItem(i, newItem);
                 }
             }
@@ -160,9 +194,11 @@ public class SettingsManager {
             item = getEmptyOutputSlot();
         }
         ItemMeta meta = item.getItemMeta();
-        meta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
-        item.setItemMeta(meta);
-        item.addUnsafeEnchantment(Enchantment.DURABILITY, 1);
+        if (meta != null) {
+            meta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
+            item.setItemMeta(meta);
+        }
+        item.addUnsafeEnchantment(Enchantment.UNBREAKING, 1);
         inv.setItem(slot, item);
     }
 
@@ -176,11 +212,9 @@ public class SettingsManager {
                         String ownstr = ChatColor.GRAY + LanguageManager.getValue("owner");
                         if (s.contains(ownstr + ": ")) {
                             String owner = s.replaceAll(ownstr + ": " + ChatColor.BLUE, "");
-                            String uuid = "";
-
-                            NBTItem nbt = new NBTItem(IOSettings);
-                            if (nbt.hasNBTData()) {
-                                uuid = nbt.getString("dsu_owner_uuid");
+                            String uuid = meta.getPersistentDataContainer().get(new NamespacedKey(DeepStoragePlus.getInstance(), "dsu_owner_uuid"), PersistentDataType.STRING);
+                            if (uuid == null) {
+                                uuid = "";
                             }
 
                             return new String[]{owner, uuid};
@@ -237,7 +271,10 @@ public class SettingsManager {
 
     public static boolean getLocked(ItemStack IOSettings, Player player) {
         List<String> users = getLockedUsers(IOSettings);
-        users.add(getOwner(IOSettings)[0]);
+        String owner = getOwner(IOSettings)[0];
+        if (owner != null && !owner.isEmpty()) {
+            users.add(owner);
+        }
         for (String s : users) {
             if (player.getName().equals(s)) {
                 return true;
@@ -247,41 +284,148 @@ public class SettingsManager {
     }
 
     public static int getSpeedUpgrade(ItemStack item) {
-        for (String lore : item.getItemMeta().getLore()) {
-            if (lore.contains(ChatColor.GRAY + LanguageManager.getValue("iospeed") + ": ")) {
-                return Integer.parseInt(ChatColor.stripColor(lore).replaceAll("[\\D]", ""));
+        if (item == null) {
+            return 0;
+        }
+
+        ItemMeta meta = item.getItemMeta();
+        if (meta == null) {
+            return 0;
+        }
+
+        Integer pdcSpeed = meta.getPersistentDataContainer().get(getSpeedUpgradeKey(), PersistentDataType.INTEGER);
+        if (pdcSpeed != null) {
+            return Math.max(0, pdcSpeed);
+        }
+
+        List<String> lore = meta.getLore();
+        if (lore == null) {
+            return 0;
+        }
+
+        for (String line : lore) {
+            if (isSpeedLoreLine(line)) {
+                int parsed = parseFirstPositiveNumber(line);
+                meta.getPersistentDataContainer().set(getSpeedUpgradeKey(), PersistentDataType.INTEGER, parsed);
+                item.setItemMeta(meta);
+                return parsed;
             }
         }
         return 0;
     }
 
     public static ItemStack addSpeedUpgrade(ItemStack item) {
+        if (item == null) {
+            return null;
+        }
+
         int i = 0;
-        int amt = 0;
         boolean found = false;
 
         ItemMeta meta = item.getItemMeta();
+        if (meta == null) {
+            return item;
+        }
+
         List<String> lore = meta.getLore();
+        if (lore == null) {
+            lore = new ArrayList<>();
+        }
+
+        int amt = getSpeedUpgrade(item);
+        int maxSpeedLevel = getMaxSpeedLevel();
+        if (amt >= maxSpeedLevel) {
+            return null;
+        }
 
         for (String l : lore) {
-            if (l.contains(ChatColor.GRAY + LanguageManager.getValue("iospeed") + ": ")) {
+            if (isSpeedLoreLine(l)) {
                 found = true;
-                amt = Integer.parseInt(ChatColor.stripColor(l).replaceAll("[\\D]", ""));
-                if (amt >= 63) {
-                    return null;
-                }
                 break;
             }
             i++;
         }
 
+        int newSpeedLevel = amt + 1;
+        String speedLoreLine = ChatColor.GRAY + LanguageManager.getValue("iospeed") + ": " + ChatColor.GREEN + "+" + newSpeedLevel;
         if (found) {
-            lore.set(i, ChatColor.GRAY + LanguageManager.getValue("iospeed") + ": " + ChatColor.GREEN + "+" + (amt + 1));
+            lore.set(i, speedLoreLine);
         } else {
-            lore.add(ChatColor.GRAY + LanguageManager.getValue("iospeed") + ": " + ChatColor.GREEN + "+" + (amt + 1));
+            lore.add(speedLoreLine);
         }
+
+        meta.getPersistentDataContainer().set(getSpeedUpgradeKey(), PersistentDataType.INTEGER, newSpeedLevel);
         meta.setLore(lore);
         item.setItemMeta(meta);
         return item;
+    }
+
+    private static NamespacedKey getSpeedUpgradeKey() {
+        return new NamespacedKey(DeepStoragePlus.getInstance(), SPEED_PDC_KEY);
+    }
+
+    private static int getMaxSpeedLevel() {
+        int configured = DeepStoragePlus.getInstance().getConfig().getInt("io-speed.max-level", DEFAULT_MAX_SPEED_LEVEL);
+        return Math.max(1, configured);
+    }
+
+    private static int parseFirstPositiveNumber(String line) {
+        if (line == null) {
+            return 0;
+        }
+        String stripped = ChatColor.stripColor(line);
+
+        Matcher matcher = SPEED_DIGITS_PATTERN.matcher(stripped);
+        if (!matcher.find()) {
+            return 0;
+        }
+
+        try {
+            return Integer.parseInt(matcher.group(1));
+        } catch (NumberFormatException ignored) {
+            return 0;
+        }
+    }
+
+    private static boolean isSpeedLoreLine(String line) {
+        if (line == null) {
+            return false;
+        }
+        String stripped = ChatColor.stripColor(line);
+
+        String trimmed = stripped.trim();
+        String configuredPrefix = LanguageManager.getValue("iospeed") + ":";
+        if (trimmed.startsWith(configuredPrefix)) {
+            return true;
+        }
+
+        String normalized = trimmed.toLowerCase().replace(" ", "");
+        return normalized.startsWith("iospeed:") || normalized.startsWith("io-geschwindigkeit:");
+    }
+
+    private static boolean isAllToken(String line) {
+        String value = normalizeIOValue(line);
+        String configured = normalizeConfigToken(LanguageManager.getValue("all"));
+        return value.equals("all") || value.equals("alle") || (!configured.isEmpty() && value.equals(configured));
+    }
+
+    private static boolean isNoneToken(String line) {
+        String value = normalizeIOValue(line);
+        String configured = normalizeConfigToken(LanguageManager.getValue("none"));
+        return value.equals("none") || value.equals("keine") || (!configured.isEmpty() && value.equals(configured));
+    }
+
+    private static String normalizeIOValue(String line) {
+        if (line == null) {
+            return "";
+        }
+        String stripped = ChatColor.stripColor(line);
+        int colon = stripped.indexOf(':');
+        String value = colon >= 0 && colon + 1 < stripped.length() ? stripped.substring(colon + 1) : stripped;
+        return value.trim().toLowerCase();
+    }
+
+    private static String normalizeConfigToken(String value) {
+        return value == null ? "" : value.trim().toLowerCase();
     }
 }
